--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"overlayscrollbars-svelte": "^0.4.0",
+		"photoswipe": "^5.3.7",
 		"prettier": "^2.8.7",
 		"prettier-plugin-svelte": "^2.10.0",
 		"svelte": "^3.58.0",
