feat: update gallery layout

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
 		"@sveltejs/adapter-vercel": "^2.4.1",
 		"@sveltejs/kit": "^1.15.1",
 		"@types/cookie": "^0.5.1",
+		"@types/justified-layout": "^4.1.0",
 		"@typescript-eslint/eslint-plugin": "^5.57.1",
 		"@typescript-eslint/parser": "^5.57.1",
 		"eslint": "^8.37.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"justified-layout": "^4.1.0",
 		"overlayscrollbars-svelte": "^0.4.0",
 		"photoswipe": "^5.3.7",
 		"prettier": "^2.8.7",
