--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@types/justified-layout": "^4.1.0",
 		"@typescript-eslint/eslint-plugin": "^5.57.1",
 		"@typescript-eslint/parser": "^5.57.1",
+		"@vercel/analytics": "^0.1.11",
 		"eslint": "^8.38.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
