--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"tslib": "^2.5.0",
 		"typescript": "^5.0.4",
 		"vite": "^4.2.1",
-		"vitest": "^0.29.8"
+		"vitest": "^0.29.8",
+		"web-vitals": "^3.3.1"
 	},
 	"type": "module"
 }
