--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/adapter-vercel": "^2.4.1",
 		"@sveltejs/kit": "^1.15.2",
 		"@types/cookie": "^0.5.1",
+		"@types/gtag.js": "^0.0.12",
 		"@types/justified-layout": "^4.1.0",
 		"@typescript-eslint/eslint-plugin": "^5.57.1",
 		"@typescript-eslint/parser": "^5.57.1",
