--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"prettier": "^2.8.7",
 		"prettier-plugin-svelte": "^2.10.0",
 		"svelte": "^3.58.0",
+		"svelte-action-balancer": "^1.0.4",
 		"svelte-check": "^3.2.0",
 		"tslib": "^2.5.0",
 		"typescript": "^5.0.4",
