--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.32.2",
-		"@sveltejs/adapter-vercel": "^2.4.1",
 		"@sveltejs/kit": "^1.15.2",
 		"@types/cookie": "^0.5.1",
 		"@types/gtag.js": "^0.0.12",
@@ -41,5 +40,8 @@
 		"vitest": "^0.29.8",
 		"web-vitals": "^3.3.1"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-cloudflare": "^2.3.3"
+	}
 }
