--- a/package.json
+++ b/package.json
@@ -13,35 +13,38 @@
 		"format": "prettier --plugin-search-dir . --write .",
 		"prepare": "husky install"
 	},
+	"lint-staged": {
+    "*.{ts,js,svelte}": [
+      "eslint --fix"
+    ],
+    "*.{html,scss,css,ts,js,svelte}": [
+      "prettier --write"
+    ]
+ },
 	"devDependencies": {
 		"@playwright/test": "^1.32.2",
+		"@sveltejs/adapter-cloudflare": "^2.3.3",
 		"@sveltejs/kit": "^1.15.2",
-		"@types/cookie": "^0.5.1",
-		"@types/gtag.js": "^0.0.12",
 		"@types/justified-layout": "^4.1.0",
 		"@typescript-eslint/eslint-plugin": "^5.57.1",
 		"@typescript-eslint/parser": "^5.57.1",
-		"@vercel/analytics": "^0.1.11",
+		"@unocss/extractor-svelte": "^0.55.4",
+		"@unocss/reset": "^0.55.4",
 		"eslint": "^8.38.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"husky": "^8.0.0",
 		"justified-layout": "^4.1.0",
-		"overlayscrollbars-svelte": "^0.4.0",
 		"photoswipe": "^5.3.7",
 		"prettier": "^2.8.7",
 		"prettier-plugin-svelte": "^2.10.0",
 		"svelte": "^3.58.0",
-		"svelte-action-balancer": "^1.0.4",
 		"svelte-check": "^3.2.0",
 		"tslib": "^2.5.0",
 		"typescript": "^5.0.4",
+		"unocss": "^0.55.4",
 		"vite": "^4.2.3",
-		"vitest": "^0.29.8",
-		"web-vitals": "^3.3.1"
+		"vitest": "^0.29.8"
 	},
-	"type": "module",
-	"dependencies": {
-		"@sveltejs/adapter-cloudflare": "^2.3.3"
-	}
+	"type": "module"
 }
