--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"@unocss/reset": "^0.55.4",
 		"eslint": "^8.38.0",
 		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.33.0",
 		"husky": "^8.0.3",
 		"justified-layout": "^4.1.0",
 		"photoswipe": "^5.3.8",
