--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/parser": "^6.15.0",
     "@unocss/extractor-svelte": "^0.58.0",
     "@unocss/reset": "^0.58.0",
+    "clsx": "^2.0.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
@@ -36,8 +37,5 @@
     "unocss": "^0.58.0",
     "vite": "^5.0.10"
   },
-  "type": "module",
-  "dependencies": {
-    "clsx": "^2.0.0"
-  }
+  "type": "module"
 }
