--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "portfolio",
-	"version": "2.1.0",
+	"version": "2.2.0",
 	"author": {
 		"name": "Michael Tsai",
 		"email": "mingxcv@gmail.com"
@@ -31,6 +31,7 @@
 		"mdsvex": "^0.11.0",
 		"prettier": "^3.2.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"rehype-external-links": "^3.0.0",
 		"rehype-slug": "^6.0.0",
 		"remark-unwrap-images": "^4.0.0",
 		"shiki": "^0.14.7",
