--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
 	"printWidth": 100,
 	"plugins": ["prettier-plugin-svelte"],
 	"pluginSearchDirs": ["."],
+	"endOfLine": "lf",
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
