--- a/package.json
+++ b/package.json
@@ -11,34 +11,38 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-cloudflare": "^4.2.0",
+		"@egoist/tailwindcss-icons": "^1.7.4",
+		"@iconify-json/iconoir": "^1.1.43",
+		"@sveltejs/adapter-cloudflare": "^4.3.0",
 		"@sveltejs/kit": "^2.5.5",
-		"@sveltejs/vite-plugin-svelte": "^3.0.2",
-		"@typescript-eslint/eslint-plugin": "^7.4.0",
-		"@typescript-eslint/parser": "^7.4.0",
-		"@unocss/extractor-svelte": "^0.58.8",
-		"@unocss/reset": "^0.58.8",
+		"@sveltejs/vite-plugin-svelte": "^3.1.0",
+		"@tailwindcss/typography": "^0.5.12",
+		"@typescript-eslint/eslint-plugin": "^7.6.0",
+		"@typescript-eslint/parser": "^7.6.0",
+		"autoprefixer": "^10.4.19",
 		"clsx": "^2.1.0",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
+		"eslint-plugin-svelte": "^2.37.0",
 		"mdsvex": "^0.11.0",
 		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.2",
+		"prettier-plugin-svelte": "^3.2.3",
+		"prettier-plugin-tailwindcss": "^0.5.13",
 		"rehype-external-links": "^3.0.0",
 		"rehype-slug": "^6.0.0",
 		"remark-unwrap-images": "^4.0.0",
-		"shiki": "^1.2.1",
-		"svelte": "^4.2.12",
-		"svelte-check": "^3.6.8",
+		"shiki": "^1.3.0",
+		"svelte": "^4.2.14",
+		"svelte-check": "^3.6.9",
+		"tailwindcss": "^3.4.3",
+		"tailwindcss-animated": "^1.0.1",
 		"tslib": "^2.6.2",
-		"typescript": "^5.4.3",
-		"unocss": "^0.58.8",
-		"vite": "^5.2.7"
+		"typescript": "^5.4.5",
+		"vite": "^5.2.8"
 	},
 	"type": "module"
 }
