--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "portfolio",
 	"version": "2.2.0",
+	"type": "module",
 	"author": {
 		"name": "Michael Tsai",
 		"email": "mingxcv@gmail.com"
@@ -42,7 +43,7 @@
 		"tailwindcss-animated": "^1.0.1",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.5",
+		"vaul-svelte": "^0.3.1",
 		"vite": "^5.2.11"
-	},
-	"type": "module"
+	}
 }
