--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 	},
 	"devDependencies": {
 		"@egoist/tailwindcss-icons": "^1.8.1",
-		"@iconify-json/iconoir": "^1.1.44",
+		"@iconify-json/iconoir": "^1.2.2",
+		"@iconify-json/tabler": "^1.2.5",
 		"@sveltejs/adapter-cloudflare": "^4.6.0",
 		"@sveltejs/kit": "^2.5.18",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
