--- a/package.json
+++ b/package.json
@@ -17,34 +17,35 @@
 	},
 	"devDependencies": {
 		"@egoist/tailwindcss-icons": "^1.8.1",
-		"@iconify-json/iconoir": "^1.1.44",
-		"@sveltejs/adapter-cloudflare": "^4.6.0",
-		"@sveltejs/kit": "^2.5.18",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
-		"@tailwindcss/typography": "^0.5.13",
+		"@iconify-json/iconoir": "^1.2.2",
+		"@iconify-json/tabler": "^1.2.6",
+		"@sveltejs/adapter-cloudflare": "^4.7.3",
+		"@sveltejs/kit": "^2.5.27",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@tailwindcss/typography": "^0.5.15",
 		"@typescript-eslint/eslint-plugin": "^7.15.0",
 		"@typescript-eslint/parser": "^7.15.0",
-		"autoprefixer": "^10.4.19",
+		"autoprefixer": "^10.4.20",
 		"clsx": "^2.1.1",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.41.0",
-		"mdsvex": "^0.11.2",
-		"prettier": "^3.3.2",
-		"prettier-plugin-svelte": "^3.2.5",
-		"prettier-plugin-tailwindcss": "^0.6.5",
+		"eslint-plugin-svelte": "^2.45.1",
+		"mdsvex": "^0.12.3",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.6",
+		"prettier-plugin-tailwindcss": "^0.6.8",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-external-links": "^3.0.0",
 		"rehype-slug": "^6.0.0",
-		"remark-unwrap-images": "^4.0.0",
+		"remark-unwrap-images": "^4.0.1",
 		"shiki": "^1.10.1",
-		"svelte": "^4.2.18",
-		"svelte-check": "^3.8.4",
-		"tailwindcss": "^3.4.4",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"tailwindcss": "^3.4.14",
 		"tailwindcss-animated": "^1.1.2",
-		"tslib": "^2.6.3",
-		"typescript": "^5.5.3",
+		"tslib": "^2.8.0",
+		"typescript": "^5.6.3",
 		"vaul-svelte": "^0.3.2",
-		"vite": "^5.3.3"
+		"vite": "^5.4.10"
 	}
 }
