--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "portfolio",
-	"version": "2.2.0",
+	"version": "3.0.0",
 	"type": "module",
 	"author": {
 		"name": "Michael Tsai",
@@ -17,35 +17,51 @@
 	},
 	"devDependencies": {
 		"@egoist/tailwindcss-icons": "^1.8.1",
-		"@iconify-json/iconoir": "^1.2.2",
-		"@iconify-json/tabler": "^1.2.6",
-		"@sveltejs/adapter-cloudflare": "^4.7.3",
-		"@sveltejs/kit": "^2.5.27",
+		"@iconify-json/iconoir": "^1.2.3",
+		"@melt-ui/pp": "^0.3.2",
+		"@shikijs/rehype": "^1.22.2",
+		"@shikijs/transformers": "^1.22.2",
+		"@sveltejs/adapter-cloudflare": "^4.7.4",
+		"@sveltejs/kit": "^2.7.5",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
-		"@tailwindcss/typography": "^0.5.15",
-		"@typescript-eslint/eslint-plugin": "^7.15.0",
-		"@typescript-eslint/parser": "^7.15.0",
+		"@types/node": "^22.9.0",
+		"@typescript-eslint/eslint-plugin": "^8.13.0",
+		"@typescript-eslint/parser": "^8.13.0",
 		"autoprefixer": "^10.4.20",
 		"clsx": "^2.1.1",
-		"eslint": "^8.57.0",
+		"eslint": "^9.14.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.45.1",
-		"mdsvex": "^0.12.3",
+		"eslint-plugin-svelte": "^2.46.0",
 		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.6",
+		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.8",
-		"rehype-autolink-headings": "^7.1.0",
-		"rehype-external-links": "^3.0.0",
-		"rehype-slug": "^6.0.0",
-		"remark-unwrap-images": "^4.0.1",
-		"shiki": "^1.10.1",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
+		"svelte": "^5.1.9",
+		"svelte-check": "^4.0.5",
 		"tailwindcss": "^3.4.14",
 		"tailwindcss-animated": "^1.1.2",
-		"tslib": "^2.8.0",
+		"tslib": "^2.8.1",
 		"typescript": "^5.6.3",
-		"vaul-svelte": "^0.3.2",
 		"vite": "^5.4.10"
+	},
+	"dependencies": {
+		"@melt-ui/svelte": "^0.86.0",
+		"flexsearch": "^0.7.43",
+		"gray-matter": "^4.0.3",
+		"lite-youtube-embed": "^0.3.3",
+		"rehype-autolink-headings": "^7.1.0",
+		"rehype-code-titles": "^1.2.0",
+		"rehype-external-links": "^3.0.0",
+		"rehype-raw": "^7.0.0",
+		"rehype-slug": "^6.0.0",
+		"rehype-stringify": "^10.0.1",
+		"rehype-unwrap-images": "^1.0.0",
+		"remark-gfm": "^4.0.0",
+		"remark-parse": "^11.0.0",
+		"remark-rehype": "^11.1.1",
+		"remark-smartypants": "^3.0.2",
+		"remark-toc": "^9.0.0",
+		"tailwind-merge": "^2.5.4",
+		"unified": "^11.0.4",
+		"unist-util-visit": "^5.0.0"
 	}
 }
