--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"lint": "eslint . && prettier --check .",
+		"format": "prettier --write .",
+		"prepare": "husky"
+	},
+	"lint-staged": {
+		"*.{js,ts,svelte}": [
+			"prettier --write",
+			"eslint"
+		]
 	},
 	"devDependencies": {
 		"@egoist/tailwindcss-icons": "^1.8.1",
@@ -22,7 +29,7 @@
 		"@shikijs/rehype": "^1.22.2",
 		"@shikijs/transformers": "^1.22.2",
 		"@sveltejs/adapter-cloudflare": "^4.7.4",
-		"@sveltejs/kit": "^2.7.5",
+		"@sveltejs/kit": "^2.8.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/node": "^22.9.0",
 		"@typescript-eslint/eslint-plugin": "^8.13.0",
@@ -32,20 +39,23 @@
 		"eslint": "^9.14.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.0",
+		"globals": "^15.12.0",
+		"husky": "^9.1.6",
+		"lint-staged": "^15.2.10",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.8",
-		"svelte": "^5.1.9",
-		"svelte-check": "^4.0.5",
+		"svelte": "^5.1.13",
+		"svelte-check": "^4.0.6",
 		"tailwindcss": "^3.4.14",
 		"tailwindcss-animated": "^1.1.2",
 		"tslib": "^2.8.1",
 		"typescript": "^5.6.3",
+		"typescript-eslint": "^8.13.0",
 		"vite": "^5.4.10"
 	},
 	"dependencies": {
 		"@melt-ui/svelte": "^0.86.0",
-		"flexsearch": "^0.7.43",
 		"gray-matter": "^4.0.3",
 		"lite-youtube-embed": "^0.3.3",
 		"rehype-autolink-headings": "^7.1.0",
