--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
 	},
 	"dependencies": {
 		"@melt-ui/svelte": "^0.86.0",
+		"embla-carousel": "^8.3.1",
+		"embla-carousel-svelte": "^8.3.1",
 		"gray-matter": "^4.0.3",
 		"lite-youtube-embed": "^0.3.3",
 		"rehype-autolink-headings": "^7.1.0",
