--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
 		"tslib": "^2.8.1",
 		"typescript": "^5.6.3",
 		"typescript-eslint": "^8.13.0",
-		"vite": "^5.4.10"
+		"vite": "^5.4.10",
+		"vite-plugin-font": "^4.0.0"
 	},
 	"dependencies": {
 		"@melt-ui/svelte": "^0.86.0",
