--- a/package.json
+++ b/package.json
@@ -23,14 +23,12 @@
     ]
   },
   "devDependencies": {
-    "@egoist/tailwindcss-icons": "^1.8.1",
-    "@iconify-json/iconoir": "^1.2.3",
     "@melt-ui/pp": "^0.3.2",
     "@shikijs/rehype": "^1.22.2",
     "@shikijs/transformers": "^1.22.2",
     "@sveltejs/adapter-cloudflare": "^4.7.4",
     "@sveltejs/kit": "^2.8.0",
-    "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@sveltejs/vite-plugin-svelte": "^4.0.4",
     "@types/node": "^22.9.0",
     "@typescript-eslint/eslint-plugin": "^8.13.0",
     "@typescript-eslint/parser": "^8.13.0",
@@ -56,6 +54,7 @@
     "vite-plugin-font": "^4.0.0"
   },
   "dependencies": {
+    "@iconify/svelte": "^4.1.0",
     "@melt-ui/svelte": "^0.86.0",
     "embla-carousel": "^8.3.1",
     "embla-carousel-svelte": "^8.3.1",
