--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     ]
   },
   "devDependencies": {
+    "@iconify-json/iconoir": "^1.2.6",
     "@melt-ui/pp": "^0.3.2",
     "@shikijs/rehype": "^1.22.2",
     "@shikijs/transformers": "^1.22.2",
@@ -50,11 +51,11 @@
     "tslib": "^2.8.1",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.13.0",
+    "unplugin-icons": "^0.22.0",
     "vite": "^5.4.10",
     "vite-plugin-font": "^4.0.0"
   },
   "dependencies": {
-    "@iconify/svelte": "^4.1.0",
     "@melt-ui/svelte": "^0.86.0",
     "embla-carousel": "^8.3.1",
     "embla-carousel-svelte": "^8.3.1",
